--- a/bloxorz/bloxorz.html
+++ b/bloxorz/bloxorz.html
@@ -40,7 +40,7 @@
                 "TYTEEEEEEE",
                 "TTTETTTTTE",
                 "ETTTTTTTTT",
-                "EEEEEETFTT",
+                "EEEETTFTTT",
                 "EEEEEETTTE"
             ],
             easy: [
